MB-22421: Add support for macro expansion

Extended attributes allows for macro expansion implemented
by the pre_link_document callback from the document part
of the server API. This method should be called AFTER
the documents CAS is assigned and BEFORE the document is
made available to other clients.

Change-Id: I0343ec07d923e13f091bb8c2631d0f913dafc6b8
Reviewed-on: http://review.couchbase.org/74309
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>